--- a/gsf/index.html
+++ b/gsf/index.html
@@ -15,7 +15,7 @@
   <script src="p5.js"></script>
   <script src="p5.sound.min.js"></script>
   <script src="p5.sound.js"></script>
-  <script src="GSF_GameCode.js"></script>
+  <script src="GSF_GameCode.js" type="module"></script>
   <script src="firebase-config.js" type="module"></script>
   <script src="CRUD.js" type="module"></script>
   <div>
